[package]
name = "c_rsdake"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "c_rsdake"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = "3.2.1"
hashcom-rs = "0.2.0"
rustler = "0.28.0"
ring = "0.16.20"
nazgul = "0.1.10"
cmac = "0.7.2"
rand = "0.8.5"
aes = "0.8.2"
sha2 = "0.9.9"
rand_core = "0.5.1"
